--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url = jdbc:h2:./devdb
-spring.datasource.username = sa
+#spring.datasource.url = jdbc:h2:./devdb
+#spring.datasource.username = sa
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.javax.persistence.validation.mode=none
